--- a/stylebp1.css
+++ b/stylebp1.css
@@ -16,7 +16,7 @@
 	margin-top: 140px;
 	margin-right: -360px;
 	margin-left: -220px;
-
+	
 }
 .subhead {
 	margin: 0%;
@@ -76,8 +76,12 @@ nav .closeMenu {
 	padding-top: 10px;
 
 }
+.cta_list {
+	list-style: none;
+}
 .field {
-	background-color: aliceblue;
+	background-color:darkred;
+	color: white;
 	margin-top: 10px;
 	margin-right: 200px;
 	padding-left: 10px;
@@ -85,7 +89,7 @@ nav .closeMenu {
 	border: solid 1px;
 	border-color: black;
 	border-radius: 5px;
-	display: none;
+	
 }
 .field_form {
 	position: fixed;
@@ -95,6 +99,7 @@ nav .closeMenu {
 	right: 0;
 	height: auto;
 	overflow: auto;
+	display: none;
 	
 }
 
@@ -103,6 +108,7 @@ nav .closeMenu {
 	font-size: 25px;
 	transition: all 200ms;
 	font-weight: bold;
+	
 }
 input[type=text], textarea{
 	width: 70%;
@@ -119,7 +125,7 @@ input[type=text], textarea{
   	border: 1px solid black;
  	color:whitesmoke;
 	margin-top: -20px;
-	margin-left: 170px;
+	margin-left: 200px;
   	padding: 15px 32px;
 	font-weight: bold;
   	text-align: center;
@@ -139,8 +145,8 @@ button.connect:hover {
 	color: black;
 
 }
-#my video {
-	display: none;
+#my-video {
+	pointer-events: none;
 
 }
 .box {
@@ -154,7 +160,7 @@ button.connect:hover {
 .switch {
 	align-items: left;
 	align-content: flex-start;
-	margin-top: -30px;
+	margin-top: 10px;
 	margin-left: 66px;
 
 }
