--- a/index.scss
+++ b/index.scss
@@ -1,9 +1,300 @@
-$button-color: rgb(0,0,139);
+.top {
+	background-color: rgb(255,215,0);
+	background: linear-gradient(135deg, rgba(255,215,0,1) 5%, rgba(28,27,3,1) 89%);
+	padding-bottom: 50px;
 
-.logo {
-    background-color: $button-color;
 }
-$red-bg : red;
-p{
-    background-color: $red-bg;
+.topimg {
+	background-image: url("Website Creator3.png");
+	background-repeat: no-repeat;
+	background-position:100%;
+	background-size: 57%;
+	
+}
+.main_heading {
+	list-style: none;
+	font-weight: bold;
+	font-size: 40px;
+	color: white;
+	margin-bottom: 180px;
+	margin-left: 25px;
+	margin-top: -20px;
+	padding-left: 10px;
+	
+}
+.subhead {
+	margin-top: -10%;
+	padding-bottom: 20%;
+	padding-top: 20%;
+	font-weight: bold;
+	font-size: 40px;
+	color: white;
+
+}
+img {
+	float: right;
+	margin-left: -61px;
+	margin-top: -117px;
+
+}
+.img-fluid {
+	max-width: 100%;
+	height: auto;
+
+}	
+nav {
+	display: flex;
+	justify-content: space-between;
+
+}
+nav .openMenu {
+	font-size: 2rem;
+	margin: 35px;
+	display:inline;
+	cursor: pointer;
+	
+}
+nav .closeMenu {
+	font-size: 2rem;
+	margin: 20px;
+	display:inline;
+	cursor: pointer;
+	display: none;
+
+}
+
+.closeMenu{
+	display: none;
+
+}
+.logo {
+	margin-left: 30px;
+	margin-top: 42px;
+
+}
+.CTA {
+	list-style: none;
+	margin-left: 16%;
+	margin-top: -17%;
+	padding-top: 2%;
+
+}
+.cta_list {
+	list-style: none;
+	
+}
+.serv_list {
+	list-style: none;
+}
+.field {
+	background-color:darkred;
+	color: white;
+	margin-top: 10px;
+	margin-right: 200px;
+	padding-left: 10px;
+	margin-left: 10px;
+	border: solid 1px;
+	border-color: black;
+	border-radius: 5px;
+	
+}
+.inquiry {
+	list-style: none;
+}
+.field_form {
+	position: fixed;
+	background-size: cover;
+	top: 200px;
+	left: 450px;
+	right: 0;
+	height: auto;
+	overflow: auto;
+	display: none;
+	
+}
+
+.field .close {
+	margin-left: 480px;
+	font-size: 25px;
+	transition: all 200ms;
+	font-weight: bold;
+	
+}
+input[type=text], textarea{
+	width: 70%;
+}
+
+.text {
+	color: white;
+	font-size: 35px;
+	font-weight: bold;
+
+}
+.connect {
+	background-color:darkblue;
+  	border: 1px solid black;
+ 	color:whitesmoke;
+	margin-top: -20px;
+	margin-left: 200px;
+  	padding: 15px 32px;
+	font-weight: bold;
+  	text-align: center;
+  	text-decoration: none;
+  	display: inline-block;
+  	font-size: 16px;
+	border-radius: 10px;
+
+}
+button.connect:hover {
+	background-color:black;
+}
+.smallmsg {
+	margin-top: 15px;
+	font-size: large;
+	font-weight: bold;
+	color: black;
+
+}
+#my-video {
+	pointer-events: none;
+
+}
+.box {
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row-reverse;
+	justify-content: space-between;
+	background-image: url("Multi-device5.png");
+	background-size: 60%;
+	background-position: 5%;
+	background-repeat: no-repeat;
+	
+}
+
+.modern_web {
+	font-size: 35px;
+	font-weight: bolder;
+	margin-top: 190px;
+	margin-right: 117px;
+	padding-left: 30px;
+	padding-right: 30px;
+	padding-bottom: 45px;
+	border-radius: 90px;
+	margin-bottom: 130px;
+	list-style: none;
+	color: gray;
+	background-color: whitesmoke;
+
+}
+.brwsmsg {
+	font-size: 15px;
+
+}
+.second_phase {
+	background: rgb(255,215,0);
+	background: linear-gradient(291deg, rgba(255,215,0,1) 20%, rgba(28,27,3,1) 99%);
+
+}
+.bye_msg {
+	text-align: center;
+	margin-right: 30px;
+	font-size: 30px;
+	font-weight: bolder;
+	font-family:Verdana, Geneva, Tahoma, sans-serif;
+	color: whitesmoke;
+	
+}
+h1 {
+	text-align: center;
+	font-weight:lighter;
+	font-size: 40px;
+
+}
+.type_of_services {
+	display: flex;
+	flex-wrap:wrap;
+	flex-direction: row;
+	justify-content: space-around;
+	padding-top: 5px;
+	padding: 0%;
+	font-size:large;
+	margin-left: 0px;
+	margin-bottom: -35px;
+	
+}
+.sector {
+	font-size: 25px;
+	font-weight: bolder;
+	margin-right: 5%;
+	color: gray;
+	background-color:whitesmoke;
+	border-radius: 10px;
+
+}
+h4 {
+	font-weight: bold;
+	font-size: 20px;
+
+}
+footer {
+	padding: 5px;
+
+}
+.services {
+	background-color: chartreuse;
+	text-align: center;
+	height: auto;
+	top: 200px;
+	left: 450px;
+	display: none;
+	
+}
+.dropped_content {
+	display: block;
+	
+}
+
+@media (max-width: 768px) {
+	.top {
+		background-size:58.5%;
+		background-position: 100%;
+		padding-bottom: 83px;
+		background-color: rgb(255,215,0);
+		background: linear-gradient(135deg, rgba(255,215,0,1) 5%, rgba(28,27,3,1) 89%);
+	
+	}
+	.main_heading {
+		text-align: left;
+	}
+	
+	.type_of_services {
+		display: flex;
+		flex-wrap:wrap;
+		flex-direction: column;
+		justify-content: space-around;
+		padding-top: 5px;
+		padding: 0%;
+		font-size:large;
+		margin-left: 0px;
+		margin-bottom: -35px;
+		
+	}
+	.sector {
+		margin-left: 4%;
+		text-align: center;
+	
+	}
+	.box {
+		display: flex;
+		flex-direction:column-reverse;
+		align-content: center;
+		background-position-y: top;
+		justify-content: center;
+	}
+	.modern_web {
+		margin-left: 180px;
+		margin-top: 200px;
+		text-align: center;
+	
+	}
 }
